# readmine

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: PROJECT_BRIEF.md
src/readmine/: __init__.py  cli.py  core.py
tests/: test_core.py
