[build-system]
  requires = ["setuptools>=68"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "readmine"
  version = "0.1.0"
  description = "Ethical offline reader for public pages you can access."
  readme = "README.md"
  requires-python = ">=3.10"
  license = "MIT"
  authors = [{ name = "Nripanka Das" }]
  keywords = [
    "reader",
"offline",
"html",
"archive",
"python"
  ]
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
  ]
  dependencies = [

  ]

  [project.optional-dependencies]
  dev = ["pytest>=8", "build>=1.2", "ruff>=0.6"]

  [project.scripts]
  readmine = "readmine.cli:main"

  [project.urls]
  Homepage = "https://github.com/nripankadas07/readmine"
  Repository = "https://github.com/nripankadas07/readmine"
  Issues = "https://github.com/nripankadas07/readmine/issues"

  [tool.pytest.ini_options]
  testpaths = ["tests"]

  [tool.ruff]
  line-length = 100
  target-version = "py310"

  [tool.setuptools.packages.find]
  where = ["src"]
